# CRM-system-For-coffee-houses

./: .black  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pre-commit  pyproject.toml  results.sqlite
apps/admins/: admin.py  models.py  serializers.py  urls.py  views.py
apps/admins/migrations/: 0001_initial.py  0002_alter_branches_options_alter_branchworkdays_options_and_more.py  0003_remove_branches_schedule_branches_schedule.py  0004_alter_branches_schedule.py  0005_category_alter_branches_branch_name_menu_and_more.py  0006_remove_menu_product_raw_recipe_menu_product_raw.py  0007_alter_menu_price.py  0008_rename_product_raw_menu_products_and_more.py  0009_extraproduct_quantity_and_more.py  0010_alter_branches_menu.py  0011_remove_branches_menu_branches_menu.py
apps/user_app/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/user_app/migrations/: 0001_initial.py  0002_remove_clientprofile_otp_remove_employeeprofile_otp_and_more.py  0003_alter_clientprofile_options_alter_customuser_options_and_more.py  0004_alter_customuser_email.py  0005_customuser_otp_expiration.py  0006_customuser_login.py  0007_alter_customuser_otp_alter_customuser_otp_expiration.py  0008_alter_customuser_password.py  0009_alter_customuser_otp.py  0010_alter_customuser_otp.py  0011_customuser_is_super_admin.py
config/: urls.py
config/settings/: __init__.py  base.py  celery.py  database.py  drf.py  jazzmin.py  logging.py
tests/: test_create_employee.py
utils/services/: send_email.py
